--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -477,10 +477,11 @@ img {
   width: 100%;
   aspect-ratio: 1 / 1;
   object-fit: cover;
-  object-position: center top;
+  object-position: center 15%;
   display: block;
   position: relative;
   z-index: 1;
+  border-radius: 50%;
 }
 
 /* ------------------------------------------- */
